--- a/BaseLibrary/build.gradle
+++ b/BaseLibrary/build.gradle
@@ -28,12 +28,16 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "androidx.appcompat:appcompat:$support_version"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    api "com.google.android.material:material:$material_version"
+    api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    api "androidx.appcompat:appcompat:$support_version"
+    api "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    api "com.github.bumptech.glide:glide:$glide_version"
+    api 'com.blankj:utilcode:1.20.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
     mavenCentral()
