--- a/NetLibrary/build.gradle
+++ b/NetLibrary/build.gradle
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api "com.squareup.retrofit2:retrofit:$retrofit2_version"
     api "com.squareup.retrofit2:converter-gson:$retrofit2_version"
@@ -36,10 +36,8 @@ dependencies {
     api "com.squareup.retrofit2:adapter-rxjava2:$retrofit2_version"
     api "io.reactivex.rxjava2:rxandroid:$rx_android_version"
     api "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    api "com.blankj:utilcode:1.20.3"
-    api "com.google.android.material:material:$material_version"
-    api "com.github.bumptech.glide:glide:$glide_version"
-
+    api 'com.blankj:utilcode:1.20.3'
+    api 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
