--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.2-alpha01'
     implementation project(':NetLibrary')
     implementation project(':MvvmModule')
+    implementation project(':BaseLibrary')
 }
