--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     ext.lifecycle_version = '2.1.0-alpha02'
     ext.glide_version = '4.4.0'
     ext.material_version = '1.1.0-alpha04'
-
+    ext.dagger_version = '2.11'
     repositories {
         google()
         jcenter()
