--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.core:core-ktx:$core_version"
-    api "androidx.appcompat:appcompat:$support_version"
-    api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+//    implementation "androidx.core:core-ktx:$core_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.2-alpha01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.2-alpha01'
