--- a/BaseLibrary/build.gradle
+++ b/BaseLibrary/build.gradle
@@ -31,16 +31,18 @@ dependencies {
     api "com.google.android.material:material:$material_version"
     api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
     api "androidx.appcompat:appcompat:$support_version"
+    api "io.reactivex.rxjava2:rxandroid:$rx_android_version"
+    api "com.squareup.retrofit2:retrofit:$retrofit2_version"
     api "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     api "com.github.bumptech.glide:glide:$glide_version"
     api 'com.blankj:utilcode:1.20.3'
     api "com.google.dagger:dagger:$dagger_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
     mavenCentral()
