--- a/NetLibrary/build.gradle
+++ b/NetLibrary/build.gradle
@@ -29,15 +29,15 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api "com.squareup.retrofit2:retrofit:$retrofit2_version"
-    api "com.squareup.retrofit2:converter-gson:$retrofit2_version"
-    api "com.squareup.okhttp3:logging-interceptor:$ok_http_version"
-    api "com.squareup.retrofit2:adapter-rxjava2:$retrofit2_version"
-    api "io.reactivex.rxjava2:rxandroid:$rx_android_version"
-    api "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    api 'com.blankj:utilcode:1.20.3'
-    api 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit2_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$ok_http_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit2_version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rx_android_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation 'com.blankj:utilcode:1.20.3'
+    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
